NULL =

# awn python scripts
# python doesn't like that awn is platform-specific, but awn.extras isn't
#pyawn_extrasdir = $(pythondir)/awn/extras
pyawn_extrasdir = $(pyexecdir)/awn/extras
pyawn_extras_PYTHON =	\
	__init__.py	\
	awnlib.py	\
	awnmediaplayers.py	\
	configbinder.py \
	threadqueue.py \
	$(NULL)

EXTRA_DIST = __init__.py.in
