APPLET_NAME = animal-farm
APPLET_MAIN_FILE = animal-farm.py
include $(top_srcdir)/Makefile.python-applet
dist_applet_DATA =	\
	COPYING		\
	$(NULL)

animalfarm_iconsdir = $(applet_datadir)/icons
dist_animalfarm_icons_DATA = 		\
	icons/Documents.png		\
	icons/Giraffe.png		\
	icons/Mammooth.png		\
	icons/Monkey.png		\
	icons/Morpho-Diana.png		\
	icons/Pig.png			\
	icons/Rhinoceros.png		\
	icons/Rooster.png		\
	icons/Tiger.png			\
	icons/Zebra.png			\
	icons/chinchilla.png		\
	icons/donkey.png		\
	icons/penguin.png		\
	icons/squirrel.png		\
	icons/stegosaurus.png		\
	icons/tyrannosaurus-rex.png	\
	icons/walrus.png		\
	icons/AUTHORS			\
	$(NULL)
