APPLET_NAME = awn-meebo
APPLET_MAIN_FILE = awn-meebo.py
include $(top_srcdir)/Makefile.python-applet

meebo_iconsdir = $(applet_datadir)/icons
dist_meebo_icons_DATA =	\
	icons/meebo.png	\
	$(NULL)

meebo_profiledir = $(applet_datadir)/profile
dist_meebo_profile_DATA =	\
	profile/prefs.js	\
	$(NULL)
