SUBDIRS = icons

APPLET_NAME = comic
APPLET_MAIN_FILE = 	comic.py
include $(top_srcdir)/Makefile.python-applet

dist_applet_DATA =	\
		comicdialog.py	\
		getben.py	\
		getborn.py	\
		getdilbert.py	\
		getferdnand.py	\
		getgarfield.py	\
		getnancy.py	\
		getpcnp.py	\
		getpeanuts.py	\
		getpickles.py	\
		getuf.py	\
		getxkcd.py	\
		getwiz.py


