SUBDIRS = feed feeds glade locale icons
		
APPLET_NAME = comics
APPLET_MAIN_FILE = comics.py
include $(top_srcdir)/Makefile.python-applet
		
dist_applet_DATA =      \
		comics.pot  \
		comics_add.py      \
		comics_manage.py   \
		comics_view.py      \
		COPYING      \
		downloader.py   \
		shared.py	\
		sv_SE.po	\
		widgets.py 
