APPLET_NAME = digg
APPLET_MAIN_FILE = digg.py
include $(top_srcdir)/Makefile.python-applet

digg_iconsdir = $(applet_datadir)/icons
dist_digg_icons_DATA =	\
	icons/digg.svg	\
	$(NULL)

digg_profiledir = $(applet_datadir)/profile
dist_digg_profile_DATA =	\
	profile/cert8.db 	\
	profile/cookies.txt	\
	profile/history.dat	\
	profile/key3.db		\
	profile/prefs.js	\
	profile/secmod.db	\
	$(NULL)

digg_profile_cachedir = $(applet_datadir)/profile/Cache
dist_digg_profile_cache_DATA =		\
	profile/Cache/1E1BAE1Bd01	\
	profile/Cache/_CACHE_001_	\
	profile/Cache/_CACHE_002_	\
	profile/Cache/_CACHE_003_	\
	profile/Cache/_CACHE_MAP_	\
	$(NULL)
